@@ -20,13 +20,16 @@ int main()
                             reinterpret_cast<unsigned char *>(S.bitmap),
                             reinterpret_cast<unsigned char *>(V.bitmap), I.getSize());
 
+  //! [Set HSV range]
   int h = 14, s = 255, v = 209;
   int offset = 30;
   int h_low = std::max<int>(0, h - offset), h_high = std::min<int>(h + offset, 255);
   int s_low = std::max<int>(0, s - offset), s_high = std::min<int>(s + offset, 255);
   int v_low = std::max<int>(0, v - offset), v_high = std::min<int>(v + offset, 255);
   std::vector<int> hsv_range({ h_low, h_high, s_low, s_high, v_low, v_high });
+  //! [Set HSV range]
 
+  //! [Create HSV mask]
   vpImage<unsigned char> mask(height, width);
   vpImageTools::inRange(reinterpret_cast<unsigned char *>(H.bitmap),
                         reinterpret_cast<unsigned char *>(S.bitmap),
@@ -34,6 +37,7 @@ int main()
                         hsv_range,
                         reinterpret_cast<unsigned char *>(mask.bitmap),
                         mask.getSize());
+  //! [Create HSV mask]
 
   vpImage<vpRGBa> I_segmented(height, width);
   vpImageTools::inMask(I, mask, I_segmented);
